--- a/css/main.css
+++ b/css/main.css
@@ -52,16 +52,16 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
+  -ms-flex-align: end;
+  align-items: flex-end;
 }
 
 .Terms .chevron {
   width: 55px;
-  margin: -95px auto 0;
+  margin: -85px auto 0;
 }
 
 .Terms .content {
@@ -72,15 +72,18 @@ body {
   margin-bottom: 30px;
   background-color: #fff;
   border-radius: 20px;
-  padding: 42px 30px 10px;
+  padding: 30px 30px 10px;
 }
- .terms-title {
-    padding: 25px 0 10px;
-  }
+
+.Terms .terms-title {
+  padding: 25px 0;
+}
+
 .Terms .content p {
   line-height: 1.8;
   margin: 20px 0;
   color: #6c7b8a;
+  font-size: 12px;
 }
 
 .Terms .terms_paras p::-moz-selection {
