--- a/css/main.css
+++ b/css/main.css
@@ -81,7 +81,7 @@ body {
 
 .Terms .content p {
   line-height: 1.8;
-  margin: 20px 0;
+  margin: 0 20px 0;
   color: #6c7b8a;
   font-size: 12px;
 }
